--- a/src/task/task.css
+++ b/src/task/task.css
@@ -1,5 +1,7 @@
 .task {
     display: flex;
+    align-items: center;
+    gap: 8px;
 }
 
 .taskTitle {
@@ -7,4 +9,24 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.deleteButton {
+    padding: 8px 20px;
+    border: 1px solid #88b0fd;
+    border-radius: 8px;
+    height: 100%;
+    background: white;
+    outline: none;
+    cursor: pointer;
+}
+
+.deleteButton:active {
+    background: #88b0fd;
+}
+
+@media (max-width: 550px) {
+    .taskTitle {
+        width: 200px;
+    }
 }
